[package]
name = "rom-loaders-rs"
version = "0.4.11"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cp866-rs = { git = "https://github.com/madwareru/cp866-rs", version = "0.1.2"}
bin-serialization-rs = { git = "https://github.com/madwareru/bin-serialization-rs", version = "0.1.5"}
regex = "1.3.9"
bitflags = "1.0"
num_enum = "0.5"
